pos ui fix with cart

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.14",
+    "@mui/icons-material": "5.14.14",
     "@mui/material": "^5.14.14",
     "@mui/system": "^5.14.14",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^5.10.1",
+    "antd-img-crop": "^4.18.0",
     "chart.js": "^4.4.0",
     "cors": "^2.8.5",
     "daisyui": "^3.9.4",
